# dotfiles

./: .gitignore  .stow-local-ignore  .stowrc  .zshrc  CLAUDE.md  README.md  install-profile.sh
quickshell/.config/quickshell/: .envrc  ARCHITECTURE.md  ARCH_INSTALL.md  CLAUDE.md  CMakeLists.txt  README.md  REFACTOR_CHECKPOINT.md  shell.json  shell.qml
quickshell/.config/quickshell/caelestia/: README.md
quickshell/.config/quickshell/caelestia/modules/launcher/services/: M3Variants.qml
quickshell/.config/quickshell/caelestia/services/: Wallpapers.qml
quickshell/.config/quickshell/components/: Anim.qml  CAnim.qml  MaterialIcon.qml  StateLayer.qml  StyledClippingRect.qml  StyledRect.qml  StyledText.qml
quickshell/.config/quickshell/components/containers/: StyledFlickable.qml  StyledListView.qml  StyledWindow.qml
quickshell/.config/quickshell/components/controls/: CircularIndicator.qml  IconButton.qml  IconTextButton.qml  TextButton.qml
quickshell/.config/quickshell/components/effects/: ColouredIcon.qml
quickshell/.config/quickshell/components/filedialog/: FolderContents.qml
quickshell/.config/quickshell/components/images/: CachingImage.qml
quickshell/.config/quickshell/config/: Appearance.qml  AppearanceConfig.qml  BarConfig.qml  BorderConfig.qml  Config.qml  ControlCenterConfig.qml  DashboardConfig.qml  GeneralConfig.qml  LauncherConfig.qml  NotchConfig.qml  NotifsConfig.qml  OsdConfig.qml  ServiceConfig.qml  SessionConfig.qml  SidebarConfig.qml  UtilitiesConfig.qml  WInfoConfig.qml
quickshell/.config/quickshell/modules/: BatteryMonitor.qml  IdleMonitors.qml  Shortcuts.qml
quickshell/.config/quickshell/modules/areapicker/: Picker.qml
quickshell/.config/quickshell/modules/background/: Visualiser.qml
quickshell/.config/quickshell/modules/bar/: Bar.qml
quickshell/.config/quickshell/modules/bar/components/: ActiveWindow.qml  StatusIcons.qml  TrayItem.qml
quickshell/.config/quickshell/modules/bar/components/workspaces/: Workspace.qml  Workspaces.qml
quickshell/.config/quickshell/modules/bar/popouts/: Content.qml  KbLayout.qml  Network.qml
quickshell/.config/quickshell/modules/controlcenter/: NavRail.qml  Panes.qml  Session.qml  WindowFactory.qml  WindowTitle.qml
quickshell/.config/quickshell/modules/controlcenter/audio/: AudioPane.qml  Details.qml  DeviceList.qml  Settings.qml
quickshell/.config/quickshell/modules/controlcenter/network/: Details.qml  NetworkList.qml  NetworkPane.qml  Settings.qml
quickshell/.config/quickshell/modules/dashboard/: Content.qml  Dash.qml  Media.qml  Tabs.qml  Wrapper.qml
quickshell/.config/quickshell/modules/dashboard/dash/: DateTime.qml  Media.qml  User.qml
quickshell/.config/quickshell/modules/drawers/: Backgrounds.qml  Drawers.qml  Exclusions.qml  Interactions.qml  Panels.qml
quickshell/.config/quickshell/modules/launcher/items/: CalcItem.qml  WallpaperItem.qml
quickshell/.config/quickshell/modules/launcher/services/: Apps.qml  Schemes.qml
quickshell/.config/quickshell/modules/notch/: Background.qml  Content.qml  NotchWindow.qml  Wrapper.qml  qmldir
quickshell/.config/quickshell/modules/notifications/: Notification.qml
quickshell/.config/quickshell/modules/session/: Content.qml
quickshell/.config/quickshell/modules/sidebar/: NotifDock.qml  NotifGroup.qml
quickshell/.config/quickshell/modules/utilities/: Content.qml  RecordingDeleteModal.qml  Wrapper.qml
quickshell/.config/quickshell/modules/utilities/cards/: RecordingList.qml  Toggles.qml
quickshell/.config/quickshell/modules/utilities/toasts/: ToastItem.qml  Toasts.qml
quickshell/.config/quickshell/modules/windowinfo/: Buttons.qml
quickshell/.config/quickshell/plugin/: CMakeLists.txt
quickshell/.config/quickshell/plugin/src/QShell/: CMakeLists.txt
quickshell/.config/quickshell/plugin/src/QShell/Audio/: CMakeLists.txt  audiocollector.cpp  audiocollector.hpp  audioprovider.hpp  cavaprovider.hpp  service.cpp  service.hpp  serviceref.cpp  serviceref.hpp
quickshell/.config/quickshell/plugin/src/QShell/Hyprland/: CMakeLists.txt
quickshell/.config/quickshell/plugin/src/QShell/Models/: CMakeLists.txt
quickshell/.config/quickshell/plugin/src/Utils/: CMakeLists.txt  cutils.cpp  cutils.hpp  requests.cpp  requests.hpp  toaster.cpp  toaster.hpp
quickshell/.config/quickshell/plugin/src/Utils/Audio/: CMakeLists.txt  audiocollector.cpp  audiocollector.hpp  audioprovider.cpp  audioprovider.hpp  cavaprovider.cpp  cavaprovider.hpp  service.cpp  service.hpp  serviceref.cpp  serviceref.hpp
quickshell/.config/quickshell/plugin/src/Utils/Hyprland/: CMakeLists.txt  cachingimagemanager.cpp  cachingimagemanager.hpp  circularindicatormanager.cpp  circularindicatormanager.hpp
quickshell/.config/quickshell/plugin/src/Utils/Models/: CMakeLists.txt  filesystemmodel.cpp  filesystemmodel.hpp
quickshell/.config/quickshell/services/: Audio.qml  Brightness.qml  Colours.qml  GameMode.qml  Hypr.qml  IdleInhibitor.qml  Network.qml  Notifs.qml  Players.qml  Recorder.qml  SystemUsage.qml  Time.qml  Visibilities.qml  Wallpapers.qml  Weather.qml
quickshell/.config/quickshell/utils/: Icons.qml  Images.qml  Paths.qml  SysInfo.qml
(+116 files in other folders)
